--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,10 +17,39 @@
 }
 
 #waiting-container {
-  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #1a1a40;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    animation: loading 2s linear infinite;
+    aspect-ratio: 1 / 1;
+    width: 400px;
+    max-width: 80%;
+  }
 }
 
 #canvas-container {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
+}
+
+// animation loading
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
