--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
-@import './reset.scss';
-
+@import './base/reset.scss';
+@import './abstract//colors.scss';
+@import './abstract/functions.scss';
 /* Global Styles */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -16,7 +17,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/*-------------------
+  Waiting Container
+--------------------*/
 #waiting-container {
+  user-select: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -35,6 +40,9 @@
   }
 }
 
+/*-------------------
+  Canvas Container
+--------------------*/
 #canvas-container {
   opacity: 0;
   position: absolute;
@@ -51,5 +59,51 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/*-------------------
+  Settings Container
+--------------------*/
+#settings-container {
+  user-select: none;
+  position: absolute;
+  bottom: rem(16);
+  right: rem(16);
+  display: flex;
+  align-items: center;
+  gap: rem(4);
+  z-index: 100;
+
+  div {
+    width: rem(20);
+    height: rem(20);
+    background-color: $bleuMarine;
+    border: 1px solid $white;
+    transition: bborder-color 0.3s linear;
+    border-radius: rem(50);
+
+    &.is-active {
+      border-width: rem(2);
+    }
+    &:hover {
+      cursor: pointer;
+    }
+
+    &#setting-color-bleuMarine {
+      background-color: $bleuMarine;
+    }
+    &#setting-color-grisAnthracite {
+      background-color: $grisAnthracite;
+    }
+    &#setting-color-bleuNuit {
+      background-color: $bleuNuit;
+    }
+    &#setting-color-noir {
+      background-color: $noir;
+    }
+    &#setting-color-bleuFonce {
+      background-color: $bleuFonce;
+    }
   }
 }
